Fix misaligned boosts thing, closes #12

--- a/src/app/app/misc_pages/_nitro.scss
+++ b/src/app/app/misc_pages/_nitro.scss
@@ -101,3 +101,8 @@
 .planSelectRow-2YPEKQ .actions-6rRvry {
 	@include card(2);
 }
+
+// boosts about to expire
+.message-39hdqk {
+	margin: 86px auto auto auto;
+}
